Fix style to button dark mode

--- a/styles.css
+++ b/styles.css
@@ -50,12 +50,10 @@ body {
 html {
    font-size: 14px;
    font-family: 'Inter', sans-serif;
-   box-sizing: content-box;
 }
 
 /* Content */
 .body {
-   width: 100%;
    background-color: var(--white);
 }
 
@@ -84,8 +82,8 @@ html {
 .title,
 .subtitle,
 .overview,
-.target,
-.min-target,
+.card,
+.min-card,
 .toggle-container {
    margin: auto;
 }
@@ -180,30 +178,30 @@ input:checked {
 }
 
 input:checked::before {
-   transform: translateX(26px);
+   transform: translateX(25px);
    background-color: white;
 }
 
-.target,
-.min-target {
+.card,
+.min-card {
    width: 326px;
    border-radius: 5px;
    background-color: var(--light-grayish-blue);
 }
 
-.target {
+.card {
    display: block;
    height: 216px;
    margin-bottom: 2rem;
 }
 
-.min-target {
+.min-card {
    height: 125px;
    margin-bottom: 1rem;
 }
 
-.target-dark,
-.min-target-dark {
+.card-dark,
+.min-card-dark {
    background-color: var(--dark-desaturated-blue);
 }
 
@@ -371,15 +369,27 @@ li:nth-child(5) {
 
 @media only screen and (min-width:600px) {
    .container {
-      width: 1119px;
+      width: 1111px;
       height: 800px;
       margin: auto;
    }
 
+   .subtitle {
+      margin-top: 10px;
+      margin-left: 0;
+      margin-bottom: 45px;
+   }
+
    .toggle-container {
+      display: flex;
       justify-content: end;
       margin-bottom: 0;
       margin-right: 0;
+      transform: translateY(-52px);
+   }
+
+   .text-option-mode {
+      margin-right: 10px;
    }
 
    .background {
@@ -401,33 +411,26 @@ li:nth-child(5) {
       margin-top: 50px;
    }
 
-   .target,
-   .min-target {
+   .flex-card {
+      display: flex;
+      font-display: row;
+      justify-content: space-between;
+   }
+
+   .card,
+   .min-card {
       width: 255px;
    }
 
-   .target {
-      display: inline-block;
+   .card {
       height: 217px;
-      margin-right: 29px;
-      margin-bottom: 0;
-   }
-
-   .target:last-child,
-   .subtitle {
       margin: 0;
-   }
-
-   .flex {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 60px;
    }
 
    .subtitle {
       padding: 0;
       border: none;
+      margin-bottom: 0;
    }
 
    .attribution {
